force-app/main/default/objects/Session__c/fields/Accomplishments_of_Expo__c.field-meta.xml
<CustomField>
    <fullName>Accomplishments_of_Expo__c</fullName>
    <label>Accomplishments of Expo</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>