force-app/main/default/objects/Session__c/fields/Coaches_Participate_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Coaches_Participate_Explanation__c</fullName>
    <label>Coaches Participate Explanation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>