force-app/main/default/objects/Session__c/fields/Coaches_Participate_in_Expo__c.field-meta.xml
<CustomField>
    <fullName>Coaches_Participate_in_Expo__c</fullName>
    <label>Coaches Participate in Expo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>