force-app/main/default/objects/Session__c/fields/Cohort_hold__c.field-meta.xml
<CustomField>
    <fullName>Cohort_hold__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cohort hold</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sessions (Cohort)</relationshipLabel>
    <relationshipName>CohortsHold</relationshipName>
    <type>Lookup</type>
</CustomField>