force-app/main/default/objects/Session__c/fields/Cohort_Size__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Size__c</fullName>
    <label>Cohort Size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>