force-app/main/default/objects/Session__c/fields/Date_of_Expo__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Expo__c</fullName>
    <label>Date of Expo</label>
    <type>Date</type>
</CustomField>