force-app/main/default/objects/Session__c/fields/Estimated_Date_of_Expo__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Date_of_Expo__c</fullName>
    <label>Estimated Date of Expo</label>
    <type>Date</type>
</CustomField>