force-app/main/default/objects/Session__c/fields/Expo_Report_Status__c.field-meta.xml
<CustomField>
    <fullName>Expo_Report_Status__c</fullName>
    <label>Expo Report Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Started</fullName>
                <isActive>false</isActive>
                <label>Started</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>