force-app/main/default/objects/Session__c/fields/Finance_Report_Status__c.field-meta.xml
<CustomField>
    <fullName>Finance_Report_Status__c</fullName>
    <label>Finance Report Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>