force-app/main/default/objects/Session__c/fields/Funds_Received_from_First__c.field-meta.xml
<CustomField>
    <fullName>Funds_Received_from_First__c</fullName>
    <label>Funds Received from First</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>