force-app/main/default/objects/Session__c/fields/Implementation_of_Expo__c.field-meta.xml
<CustomField>
    <fullName>Implementation_of_Expo__c</fullName>
    <label>Implementation of Expo</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>