force-app/main/default/objects/Session__c/fields/Lesson__c.field-meta.xml
<CustomField>
    <fullName>Lesson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lesson</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Meetings</relationshipLabel>
    <relationshipName>Lesson</relationshipName>
    <type>Lookup</type>
</CustomField>