force-app/main/default/objects/Session__c/fields/Location_of_Expo__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Expo__c</fullName>
    <label>Location of Expo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>