force-app/main/default/objects/Session__c/fields/Problems_with_Program__c.field-meta.xml
<CustomField>
    <fullName>Problems_with_Program__c</fullName>
    <label>Problems with Program</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>