force-app/main/default/objects/Session__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Season</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Session__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Season</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Sessions (Season)</relationshipLabel>
    <relationshipName>Seasons</relationshipName>
    <type>Lookup</type>
</CustomField>