force-app/main/default/objects/Session__c/fields/Season_Name__c.field-meta.xml
<CustomField>
    <fullName>Season_Name__c</fullName>
    <formula
  >if(Season__r.Name != null, Season__r.Name,  Session__r.Season__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Season Name</label>
    <type>Text</type>
</CustomField>