force-app/main/default/objects/Session__c/fields/Season_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Season_Start_Date__c</fullName>
    <label>Season Start Date</label>
    <type>Date</type>
</CustomField>