force-app/main/default/objects/Session__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Cohorts</relationshipLabel>
    <relationshipName>Session</relationshipName>
    <type>Lookup</type>
</CustomField>