force-app/main/default/objects/Session__c/fields/Steps_to_Promote_Expo__c.field-meta.xml
<CustomField>
    <fullName>Steps_to_Promote_Expo__c</fullName>
    <label>Steps to Promote Expo</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>