force-app/main/default/objects/Session__c/fields/Tablets_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Tablets_Purchased__c</fullName>
    <label>Tablets Purchased</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>