force-app/main/default/objects/Session__c/fields/Tablets_Purchased_Notes__c.field-meta.xml
<CustomField>
    <fullName>Tablets_Purchased_Notes__c</fullName>
    <label>Tablets Purchased Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>