force-app/main/default/objects/Session__c/fields/Volunteers_Recruited_for_Expo__c.field-meta.xml
<CustomField>
    <fullName>Volunteers_Recruited_for_Expo__c</fullName>
    <label>Volunteers Recruited for Expo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>