force-app/main/default/objects/Session__c/fields/Youth_Participated_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Youth_Participated_Explanation__c</fullName>
    <label>Youth Participated Explanation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>