force-app/main/default/objects/Session__c/fields/Youth_Participated_in_Expo__c.field-meta.xml
<CustomField>
    <fullName>Youth_Participated_in_Expo__c</fullName>
    <label>Youth Participated in Expo</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>