force-app/main/default/objects/Session__c/recordTypes/Cohort.recordType-meta.xml
<RecordType>
    <fullName>Cohort</fullName>
    <active>true</active>
    <label>Cohort</label>
</RecordType>