force-app/main/default/objects/Session__c/recordTypes/Season.recordType-meta.xml
<RecordType>
    <fullName>Season</fullName>
    <active>true</active>
    <label>Season</label>
</RecordType>