force-app/main/default/objects/Session__c/listViews/Cohorts.listView-meta.xml
<ListView>
    <fullName>Cohorts</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Season__c</columns>
    <columns>Session__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Session__c.Cohort</value>
    </filters>
    <label>Cohorts</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>