force-app/main/default/objects/Session__c/listViews/Lessons.listView-meta.xml
<ListView>
    <fullName>Lessons</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Season__c</columns>
    <columns>Session__c</columns>
    <columns>Cohort__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Session__c.Lesson</value>
    </filters>
    <label>Lessons</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>