force-app/main/default/objects/Session__c/listViews/Seasons.listView-meta.xml
<ListView>
    <fullName>Seasons</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Session__c.Season</value>
    </filters>
    <label>Seasons</label>
</ListView>